<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    tools:showIn="@layout/activity_detail_movie">

    <com.github.florent37.shapeofview.shapes.ArcView
        android:id="@+id/arcView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shape_arc_height="50dp"
        app:shape_arc_position="bottom">

        <ImageView
            android:id="@+id/iv_detail_backdrop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop" />

    </com.github.florent37.shapeofview.shapes.ArcView>

    <com.github.florent37.shapeofview.shapes.RoundRectView
        android:id="@+id/roundReactView"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:elevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/line1"
        app:layout_constraintStart_toStartOf="parent"
        app:shape_roundRect_bottomLeftRadius="16dp"
        app:shape_roundRect_bottomRightRadius="16dp"
        app:shape_roundRect_topLeftRadius="16dp"
        app:shape_roundRect_topRightRadius="16dp">

        <ImageView
            android:id="@+id/iv_detail_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_description" />


    </com.github.florent37.shapeofview.shapes.RoundRectView>

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_primary"
        android:textColor="@color/colorTextTertiary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/roundReactView"
        app:layout_constraintTop_toBottomOf="@+id/arcView" />

    <TextView
        android:id="@+id/tv_detail_vote_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:text="@string/text_vote_average"
        android:textColor="@color/colorTextTertiary"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/star"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title" />

    <TextView
        android:id="@+id/tv_detail_runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:text="@string/text_runtime"
        android:textColor="@color/colorTextTertiary"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/ic_time_black"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_title"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_vote_average"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_title" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorOnSecondary"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_runtime" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/release_date"
        android:textColor="@color/colorTextTertiary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1" />

    <TextView
        android:id="@+id/tv_detail_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/text_release_date"
        android:textColor="#B1C6DE"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/line1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/revenue"
        android:textColor="@color/colorTextTertiary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/tv_detail_revenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_nominal"
        android:textColor="@color/colorTextSecondary"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_release_date" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/budget"
        android:textColor="@color/colorTextTertiary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tv_detail_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_nominal"
        android:textColor="@color/colorTextSecondary"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_revenue" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/colorOnSecondary"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_budget" />

    <TextView
        android:id="@+id/tv_storyline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/storyline"
        android:textColor="@color/colorTextTertiary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line2" />

    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/text_subtitle"
        android:textColor="@color/colorTextTertiary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_storyline" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/menu_favorite"
        android:elevation="0dp"
        android:outlineProvider="none"
        app:backgroundTint="@android:color/transparent"
        app:borderWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@android:color/transparent"
        app:srcCompat="@android:drawable/ic_dialog_email"
        app:tint="@color/colorTextTertiary" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/view_error"
        layout="@layout/view_error"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>